maint: cleaup & fix: don't show double scrollbar on RHS

--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,16 @@
     outline: none;
 }
 
-#text a {
-    color: blue !important;
+html {
+    overflow-y: hidden;
 }
 
 body {
     background-color: #333333;
+}
+
+#text a {
+    color: blue !important;
 }
 
 .select2 {
@@ -1750,9 +1754,7 @@ input[type="file"] {
 
 #cardbox {
     display: none;
-
     border-radius: .75rem;
-
     margin-top: 40px;
     /* margin: 5% 0 5% 0; */
     background-color: var(--bg-main-marginalia);
@@ -1764,8 +1766,6 @@ input[type="file"] {
     /* padding: 4%; */
     padding: 40px 40px 40px 40px;
     /* height: 100px; */
-
-
     -moz-user-select: -moz-none;
     -khtml-user-select: none;
     -webkit-user-select: none;
